--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 html {
     background-color: rgb(255, 255, 255);
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
   
   /* Define styles for the custom header */
